Change Log:
=============================
- DanbooruDownloader20181029
  - Fix Issue #146: Reduce memory usage when reparsing Sankaku post.

- DanbooruDownloader20180721
  - Implement #168: tag replacement if no valid tag.
  - Fix Issue #127: update user agent.
  - Fix Issue #172: Upgrade project to .Net 4.5 due to security reason (TLS1.2 support).
  - Update provider list, remove dead board and switch to https if possible.

- DanbooruDownloader20170922
  - Fix Issue #111: Fix sankaku batch download, append next parameter in the url based on last imageid.

- DanbooruDownloader20170906
  - Fix Issue #130: Fix Danbooru updating API to block loli/shota for non-gold account.
  - Fix Issue #133: Update Sankaku Parser to unescape the image url.
  - Update Sankaku Parser to replace space with '+' for building tag query.

- DanbooruDownloader20170808
  - Fix Issue #128: Fix Danbooru updating API to block loli/shota for non-gold account.

- DanbooruDownloader20170131
  - Implement #95: Filter images by extension in batch mode (using regex).
  - Fix Issue #90: Cannot select Use Regex in Settings Tab (UI issue).
  - Fix Issue #106: Update tags parsing for Sankaku.

- DanbooruDownloader20161221
  - Implement #46 and #81: prioritize tags based on define list.
    Please create a file called 'included_tags.txt' containing tags separated by lines.
    Regex is supported.
  - Fix Issue #102: hypnohub url fixes.
  - Fix Issue #91: update website url again.

- DanbooruDownloader20161122
  - Fix Issue #100: update job numbering.
  - Try Fix Issue #99: memory leak at batch download.

- DanbooruDownloader20161114
  - Fix Issue #97: Use per-job filename format.

- DanbooruDownloader20161112
  - Fix Issue #91: update website url.
  - Implement #96: Add %general% for the filename format.
  - Add colored tag column in download grid.
  - Update tag parser for sankaku.
  - Update tag replacement behaviour for tags exceeding limit to use Over Value.