@@ -10,7 +10,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Nandaka")]
 [assembly: AssemblyProduct("DanbooruDownloader3")]
-[assembly: AssemblyCopyright("Copyright © Nandaka 2016-2018")]
+[assembly: AssemblyCopyright("Copyright © Nandaka 2016-2019")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
@@ -32,5 +32,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("3.2018.29.10")]
-[assembly: AssemblyFileVersion("3.2018.29.10")]
+[assembly: AssemblyVersion("3.2019.11.25")]
+[assembly: AssemblyFileVersion("3.2019.11.25")]
